--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,9 @@
-html{
+html {
     height: 100%;
 }
 
-body{
-    background: url('/media/homepage_background_cropped.jpg') no-repeat center fixed;
+body {
+    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -56,8 +56,18 @@ body{
     border: 1px solid black !important;
 }
 
-.bg-black{
+.bg-black {
     background: #000 !important;
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
 
 /* -------------------------------- Media Queries */
