--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -23,13 +23,14 @@
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form class="form mb-2" action="{% url 'add_product' %}" method="post" enctype="multipart/form-data"></form>
+            <form class="form mb-2" action="{% url 'add_product' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form | crispy }}
-            <div class="text-right">
-                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0">Cancel</a>
-                <button class="btn btn-black rounded-0" type="submit">Add Product</button>
-            </div>
+                <div class="text-right">
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0">Cancel</a>
+                    <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
