--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -25,7 +25,13 @@
         <div class="col-12 col-md-6">
             <form class="form mb-2" action="{% url 'add_product' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form | crispy }}
+                {% for field in form %}
+                    {% if field.name != 'image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
                 <div class="text-right">
                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0">Cancel</a>
                     <button class="btn btn-black rounded-0" type="submit">Add Product</button>
@@ -38,9 +44,13 @@
 
 {% endblock %}
 
+
 {% block postloadjs %}
     {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+    <script type="text/javascript">
+        $('#new-image').change(function(){
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`)
+        });
+    </script>
 {% endblock %}
